samples/_failures_safe/1761145517_d3e53b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4bb4496c.c: In function ‘main’:
./samples/SAFE/__tmp_4bb4496c.c:153:11: error: expected ‘;’ at end of input
  153 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_4bb4496c.c:153:5: error: expected declaration or statement at end of input
  153 |     printf
      |     ^~~~~~
